fix: overflow nav left

--- a/css/style.css
+++ b/css/style.css
@@ -21,6 +21,7 @@ main .main-container .left-nav {
     flex-direction: column;
     justify-content: space-between;
     font-size: 13px;
+    overflow-y: auto;
 }
 
 main .main-container .left-nav .nav-logo {
@@ -131,7 +132,7 @@ main .main-container .left-nav .end-left .user .img-user img {
 main .bottom-nav {
     width: 100%;
     height: 100px;
-    background-color: #282828 ;
+    background-color: #000000 ;
     display: flex;
     align-items: center;
     justify-content: space-between;
@@ -488,6 +489,8 @@ main .bottom-nav .volume .volume-line:hover .volume-line-empty .volume-line-full
     .main-section .album-container .album {
         width: calc(calc( 100% / 2 - 20px));
     }
+
+    
 
     main .bottom-nav .track {
         width: 80%;
